Add entrypoint file
Make entrypoint.sh executable
chmod +x app/entrypoint.sh

Rebuild and run containers
docker-compose up --build

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -10,7 +10,7 @@ ENV PYTHONUNBUFFERED 1
 
 # install system dependencies
 RUN apt-get update \
-  && apt-get -y install gcc postgresql \
+  && apt-get -y install netcat gcc postgresql \
   && apt-get clean
 
 # install dependencies
@@ -18,5 +18,13 @@ RUN pip install --upgrade pip
 COPY ./requirements.txt .
 RUN pip install -r requirements.txt
 
+# copy entrypoint.sh
+COPY ./entrypoint.sh .
+RUN sed -i 's/\r$//g' /usr/src/app/entrypoint.sh
+RUN chmod +x /usr/src/app/entrypoint.sh
+
 # copy project
 COPY . .
+
+# run entrypoint.sh
+ENTRYPOINT ["/usr/src/app/entrypoint.sh"]
