--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 # Generate the entire file as reference with this form:
 # https://www.toptal.com/developers/gitignore?templates=python,django,dotenv,vim,visualstudiocode
 
+### django ###
+*.sqlite3
+app/.coverage
+app/htmlcov
+
 ### dotenv ###
 .env.dev
 
