--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -3,6 +3,7 @@ Django~=4.0.1
 psycopg2-binary~=2.9.3
 djangorestframework~=3.13.1
 flake8~=4.0.1
+isort~=5.10.1
 pytest-cov~=3.0.0
 pytest-django~=4.5.2
 pytest~=6.2.5
