--- a/.env.dev-sample
+++ b/.env.dev-sample
@@ -1,3 +1,9 @@
 DEBUG=1
 SECRET_KEY=foo
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+SQL_ENGINE=django.db.backends.postgresql
+SQL_DATABASE=people_depot_dev
+SQL_USER=people_depot
+SQL_PASSWORD=people_depot
+SQL_HOST=db
+SQL_PORT=5432
