--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,16 @@ services:
       - 8000:8000
     env_file:
       - ./.env.dev
+    depends_on:
+      - db
+  db:
+    image: postgres:13.0-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_USER=people_depot
+      - POSTGRES_PASSWORD=people_depot
+      - POSTGRES_DB=people_depot_dev
+
+volumes:
+  postgres_data:
