--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -2,6 +2,8 @@ black~=22.3.0
 Django~=4.0.1
 psycopg2-binary~=2.9.3
 djangorestframework~=3.13.1
+cryptography~=37.0.2
+drf-jwt~=1.19.2
 flake8~=4.0.1
 isort~=5.10.1
 pytest-cov~=3.0.0
