Put settings in env file

--- a/.env.dev-sample
+++ b/.env.dev-sample
@@ -8,3 +8,6 @@ SQL_PASSWORD=people_depot
 SQL_HOST=db
 SQL_PORT=5432
 DATABASE=postgres
+
+COGNITO_AWS_REGION=us-west-2
+COGNITO_USER_POOL=us-west-2_XXXXXX
