--- a/app/setup.cfg
+++ b/app/setup.cfg
@@ -4,3 +4,9 @@ exclude = migrations,env
 
 [isort]
 profile = black
+
+[tool:pytest]
+DJANGO_SETTINGS_MODULE = peopledepot.settings
+python_files = tests.py test_*.py *_tests.py
+# addopts = -vv -x --last-failed --cov --cov-report html
+addopts = -x --failed-first --cov --cov-report term --no-cov-on-fail
