Add user time_zone field

--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -15,3 +15,5 @@ django-extensions~=3.1.5
 drf-spectacular==0.22.1
 markdown~=3.4.1
 django-phonenumber-field[phonenumbers]~=6.3.0
+django-timezone-field==5.0
+tzdata==2022.1
