--- a/.github/ISSUE_TEMPLATE/create-table-issue-form.yml
+++ b/.github/ISSUE_TEMPLATE/create-table-issue-form.yml
@@ -7,7 +7,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        Please see the (wiki page)[https://github.com/hackforla/peopledepot/wiki/Create-Table-issues-data-gathering-workflow] for instructions.
+        Please see the [wiki page](https://github.com/hackforla/peopledepot/wiki/Create-Table-issues-data-gathering-workflow) for instructions.
   - type: input
     id: overview
     attributes:
