--- a/.github/ISSUE_TEMPLATE/create-table-issue-form.yml
+++ b/.github/ISSUE_TEMPLATE/create-table-issue-form.yml
@@ -15,9 +15,11 @@ body:
       description: Clearly state the purpose of this issue in 2 sentences or less
       value: |
         We need to create the [name of table] table so that we can update a shared data store across hackforla.org, vrms, civictechjobs, and tables (onboarding) project.
-
-        #### Details
-
+  - type: textarea
+    id: details
+    attributes:
+      label: Details
+      value: |
         A table and a model are the same thing
     validations:
       required: true
