--- a/.github/ISSUE_TEMPLATE/create-table-issue-form.yml
+++ b/.github/ISSUE_TEMPLATE/create-table-issue-form.yml
@@ -1,7 +1,7 @@
 name: "Create Table Form"
 description: "Create an issue for each table required"
 
-labels: [feature: "table creation", role: back end, size: 2pt]
+labels: ["feature: table creation", "role: back end", "size: 2pt"]
 title: Create Table [name of table]
 body:
   - type: markdown
