add table description description

--- a/.github/ISSUE_TEMPLATE/create-table-issue-form.yml
+++ b/.github/ISSUE_TEMPLATE/create-table-issue-form.yml
@@ -50,9 +50,6 @@ body:
           - API Endpoint
     validations:
       required: true
-  - type: markdown
-    attributes:
-      value: "Find and copy the table description [here](https://docs.google.com/spreadsheets/d/1x_zZ8JLS2hO-zG0jUocOJmX16jh-DF5dccrd_OEGNZ0/edit#gid=1228509670)"
   - type: textarea
     id: table-description
     attributes:
@@ -63,6 +60,7 @@ body:
   - type: textarea
     id: table-data
     attributes:
+      description: "Find and copy the data fields checkboxes [here](https://docs.google.com/spreadsheets/d/1x_zZ8JLS2hO-zG0jUocOJmX16jh-DF5dccrd_OEGNZ0/edit#gid=1572339087)"
       label: Data Fields
       value: |
         1. Copied from spreadsheet and checked off according to ERD. (unchecked items indicate a mismatch between ERD and spreadsheet, which requires a review)
@@ -75,6 +73,7 @@ body:
   - type: textarea
     id: table-associations
     attributes:
+      description: "Find and copy the associated tables checkboxes [here](https://docs.google.com/spreadsheets/d/1x_zZ8JLS2hO-zG0jUocOJmX16jh-DF5dccrd_OEGNZ0/edit#gid=1228509670)"
       label: Associated Tables
       value: |
         1. Copied from spreadsheet and checked off according to ERD. (unchecked items indicate a mismatch between ERD and spreadsheet, which requires a review)
