--- a/.github/ISSUE_TEMPLATE/create-table-issue-form.yml
+++ b/.github/ISSUE_TEMPLATE/create-table-issue-form.yml
@@ -12,7 +12,7 @@ body:
     id: overview
     attributes:
       label: Overview
-      description: Clearly state the purpose of this issue in 2 sentences or less
+      description: Replace name of table below
       value: |
         We need to create the [name of table] table so that we can update a shared data store across hackforla.org, vrms, civictechjobs, and tables (onboarding) project.
 
@@ -25,7 +25,7 @@ body:
     id: action-items
     attributes:
       label: Action Items
-      description: "List the research to be done, or the steps to be completed. Note: If the steps can be divided into tasks for more than one person, we recommend dividing it up into separate issues, or assigning it as a pair programming task."
+      description: "Leave alone or add missing items."
       value: |
         - [ ] identify and document table description (see spreadsheet under Resources)
           - [ ] if not, reach out to PD leads
@@ -42,7 +42,7 @@ body:
     id: resources-instructions
     attributes:
       label: "Resources/Instructions"
-      description: "Provide links to resources or instructions that may help with this issue. This can include files to be worked on, external sites with solutions, documentation, etc."
+      description: "Leave alone or add to this."
       value: |
         - See [People Depot Resources wiki page](https://github.com/hackforla/peopledepot/wiki/Resources-and-Links) for links
           - ERD
