update form name

--- a/.github/ISSUE_TEMPLATE/create-table-issue-form.yml
+++ b/.github/ISSUE_TEMPLATE/create-table-issue-form.yml
@@ -1,4 +1,4 @@
-name: "Create Table Form"
+name: "Create Table Issue Form"
 description: "Create an issue for each table required"
 
 labels: ["feature: table creation", "role: back end", "size: 2pt"]
