auto: show missing line numbers in coverage

--- a/app/setup.cfg
+++ b/app/setup.cfg
@@ -9,4 +9,4 @@ profile = black
 DJANGO_SETTINGS_MODULE = peopledepot.settings
 python_files = tests.py test_*.py *_tests.py
 # addopts = -vv -x --last-failed --cov --cov-report html
-addopts = -x --failed-first --cov --cov-report term --no-cov-on-fail
+addopts = -x --failed-first --cov --cov-report term-missing --no-cov-on-fail
