dx: configure pre-commit
To add the pre-commit hook to git
1. install pre-commit
    pip install pre-commit
2. add the hook to git
    pre-commit install
3. update pre-commit to the latest version
    pre-commit autoupdate
4. test run the hook
    pre-commit run --all-files

--- a/app/setup.cfg
+++ b/app/setup.cfg
@@ -1,9 +1,11 @@
 [flake8]
 max-line-length = 119
-exclude = migrations,env
+exclude = migrations
+max-complexity = 4
 
 [isort]
 profile = black
+skip_glob = */migrations/*.py
 
 [tool:pytest]
 DJANGO_SETTINGS_MODULE = peopledepot.settings
