--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -78,6 +78,11 @@ repos:
       - id: bandit
         exclude: ^app/core/tests/
 
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v3.0.0
+    hooks:
+      - id: pyupgrade
+
   # - repo: https://github.com/Lucas-C/pre-commit-hooks-safety
   #   rev: v1.3.0
   #   hooks:
