--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,7 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
+default_stages: [commit, push]
+fail_fast: true
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.3.0
@@ -36,6 +38,11 @@ repos:
         args: [--markdown-linebreak-ext=md]
       - id: check-executables-have-shebangs
       - id: end-of-file-fixer
+
+  - repo: https://github.com/hadolint/hadolint
+    rev: v2.10.0
+    hooks:
+      - id: hadolint
 
   - repo: https://github.com/ambv/black
     rev: 22.8.0
@@ -83,24 +90,27 @@ repos:
     hooks:
       - id: pyupgrade
 
-  # - repo: https://github.com/Lucas-C/pre-commit-hooks-safety
-  #   rev: v1.3.0
-  #   hooks:
-  #     - id: python-safety-dependencies-check
-
   # - repo: https://github.com/econchick/interrogate
   #   rev: 1.4.0
   #   hooks:
   #     - id: interrogate
   #       args: [-vv, -i, --fail-under=80]
 
-  # - repo: local
-  #   hooks:
-  # - id: buildrun
-  #   name: buildrun
-  #   entry: ./scripts/buildrun.sh
-  #   language: script
-  # - id: test
-  #   name: test
-  #   entry: ./scripts/test.sh
-  #   language: script
+  - repo: local
+    hooks:
+      - id: buildrun
+        name: buildrun
+        entry: ./scripts/buildrun.sh
+        language: script
+        pass_filenames: false
+        always_run: true
+        stages: [push]
+      - id: test
+        name: test
+        entry: ./scripts/test.sh
+        language: script
+        pass_filenames: false
+        always_run: true
+        # verbose: true
+        # require_serial: true
+        stages: [push]
