--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -118,3 +118,9 @@ repos:
         # verbose: true
         # require_serial: true
         stages: [push]
+      - id: check-django-migrations
+        name: Check django migrations
+        entry: ./scripts/check-migrations.sh
+        language: script
+        types: [python] # hook only runs if a python file is staged
+        pass_filenames: false
