cSpell is a nice VS Code extension for spell checks.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,14 @@
 {
   "cSpell.words": [
+    "autoupdate",
+    "buildrun",
+    "createsuperuser",
+    "hackforla",
+    "hfla",
+    "octocat",
+    "onboarded",
+    "peopledepot",
+    "precommit",
     "VRMS"
   ]
 }
