--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -12,6 +12,8 @@ Sphinx = "^5.3.0"
 sphinx-autobuild = "^2021.3.14"
 furo = "^2022.12.7"
 myst-parser = "^0.18.1"
+sphinx-copybutton = "^0.5.1"
+sphinx-design = "^0.3.0"
 
 
 [build-system]
