Add env vars/modify instructions no input required

--- a/.env.dev-sample
+++ b/.env.dev-sample
@@ -1,6 +1,9 @@
 DEBUG=1
 SECRET_KEY=foo
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+DJANGO_SUPERUSER_USERNAME=admin1111
+DJANGO_SUPERUSER_EMAIL=admin@admin.com
+DJANGO_SUPERUSER_PASSWORD=admin
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=people_depot_dev
 SQL_USER=people_depot
