--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ fail_fast: true
 minimum_pre_commit_version: "2.18"
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.3.0
+    rev: v4.4.0
     hooks:
       # identify invalid files
       - id: check-ast
@@ -44,19 +44,19 @@ repos:
       - id: end-of-file-fixer
 
   - repo: https://github.com/hadolint/hadolint
-    rev: v2.10.0
+    rev: v2.12.1-beta
     hooks:
-      - id: hadolint
+      - id: hadolint-docker
 
   - repo: https://github.com/ambv/black
-    rev: 22.8.0
+    rev: 23.1.0
     hooks:
       - id: black
         language_version: python3.10
         exclude: ^app/core/migrations/
 
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.9.2
+  - repo: https://github.com/pycqa/flake8
+    rev: 6.0.0
     hooks:
       - id: flake8
         exclude: ^app/core/migrations/
@@ -76,8 +76,8 @@ repos:
             flake8-django,
           ]
 
-  - repo: https://github.com/timothycrosley/isort
-    rev: 5.10.1
+  - repo: https://github.com/pycqa/isort
+    rev: 5.12.0
     hooks:
       - id: isort
         name: isort (python)
@@ -90,7 +90,7 @@ repos:
         exclude: ^app/core/tests/
 
   - repo: https://github.com/asottile/pyupgrade
-    rev: v3.0.0
+    rev: v3.3.1
     hooks:
       - id: pyupgrade
 
