--- a/.env.dev-sample
+++ b/.env.dev-sample
@@ -14,3 +14,5 @@ DATABASE=postgres
 
 COGNITO_AWS_REGION=us-west-2
 COGNITO_USER_POOL=us-west-2_Fn4rkZpuB
+COGNITO_CLIENT_ID=foo
+# COGNITO_CLIENT_SECRET=foo - not required if client secret was not defined
