--- a/.env.dev-sample
+++ b/.env.dev-sample
@@ -16,3 +16,4 @@ COGNITO_AWS_REGION=us-west-2
 COGNITO_USER_POOL=us-west-2_Fn4rkZpuB
 COGNITO_CLIENT_ID=foo
 # COGNITO_CLIENT_SECRET=foo - not required if client secret was not defined
+PEOPLE_DEPOT_API_SECRET=people-depot-api-secret
