--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -109,6 +109,12 @@ repos:
       - id: bandit
         exclude: ^app/core/tests/
 
+  - repo: https://github.com/koalaman/shellcheck-precommit
+    rev: v0.7.2
+    hooks:
+    -   id: shellcheck
+#       args: ["--severity=warning"]  # Optionally only show errors and warnings
+
   # - repo: https://github.com/econchick/interrogate
   #   rev: 1.4.0
   #   hooks:
