--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -52,11 +52,24 @@ repos:
       - id: pyupgrade
         args: [--py310-plus]
 
+  - repo: https://github.com/adamchainz/django-upgrade
+    rev: 1.4.0
+    hooks:
+      - id: django-upgrade
+        args: [--target-version, "4.0"]
+
   - repo: https://github.com/ambv/black
     rev: 23.7.0
     hooks:
       - id: black
         exclude: ^app/core/migrations/
+
+  - repo: https://github.com/asottile/blacken-docs
+    rev: 1.16.0
+    hooks:
+      - id: blacken-docs
+        additional_dependencies:
+        - black==23.7.0
 
   - repo: https://github.com/pycqa/flake8
     rev: 6.1.0
@@ -77,6 +90,8 @@ repos:
             flake8-executable,
             flake8-pytest-style,
             flake8-django,
+            flake8-comprehensions,
+            flake8-tidy-imports,
           ]
 
   - repo: https://github.com/pycqa/isort
@@ -91,6 +106,12 @@ repos:
     hooks:
       - id: bandit
         exclude: ^app/core/tests/
+
+  - repo: https://github.com/koalaman/shellcheck-precommit
+    rev: v0.7.2
+    hooks:
+    -   id: shellcheck
+#       args: ["--severity=warning"]  # Optionally only show errors and warnings
 
   # - repo: https://github.com/econchick/interrogate
   #   rev: 1.4.0
