--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -43,10 +43,10 @@ repos:
       - id: check-executables-have-shebangs
       - id: end-of-file-fixer
 
-  - repo: https://github.com/hadolint/hadolint
-    rev: v2.12.1-beta
+  - repo: https://github.com/AleksaC/hadolint-py
+    rev: v2.12.0
     hooks:
-      - id: hadolint-docker
+      - id: hadolint
 
   - repo: https://github.com/asottile/pyupgrade
     rev: v3.15.0
@@ -109,11 +109,10 @@ repos:
       - id: bandit
         exclude: ^app/core/tests/
 
-  - repo: https://github.com/koalaman/shellcheck-precommit
-    rev: v0.7.2
+  - repo: https://github.com/shellcheck-py/shellcheck-py
+    rev: v0.9.0.6
     hooks:
     -   id: shellcheck
-#       args: ["--severity=warning"]  # Optionally only show errors and warnings
 
   # - repo: https://github.com/econchick/interrogate
   #   rev: 1.4.0
@@ -150,3 +149,6 @@ repos:
         language: system
         types: [python] # hook only runs if a python file is staged
         pass_filenames: false
+
+ci:
+    skip: [check-django-migrations]
