--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,9 @@ default_install_hook_types: [pre-commit, pre-push]
 default_stages: [commit, push]
 fail_fast: true
 minimum_pre_commit_version: "2.18"
+default_language_version:
+  python: python3.10
+
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
