--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,11 +2,10 @@
 # See https://pre-commit.com/hooks.html for more hooks
 default_install_hook_types: [pre-commit, pre-push]
 default_stages: [commit, push]
-fail_fast: true
 minimum_pre_commit_version: "2.18"
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v4.5.0
     hooks:
       # identify invalid files
       - id: check-ast
@@ -42,24 +41,24 @@ repos:
       - id: end-of-file-fixer
 
   - repo: https://github.com/AleksaC/hadolint-py
-    rev: v2.12.0
+    rev: v2.12.0.3
     hooks:
       - id: hadolint
 
   - repo: https://github.com/asottile/pyupgrade
-    rev: v3.10.1
+    rev: v3.15.0
     hooks:
       - id: pyupgrade
         args: [--py310-plus]
 
   - repo: https://github.com/adamchainz/django-upgrade
-    rev: 1.4.0
+    rev: 1.15.0
     hooks:
       - id: django-upgrade
         args: [--target-version, "4.0"]
 
-  - repo: https://github.com/ambv/black
-    rev: 23.7.0
+  - repo: https://github.com/psf/black-pre-commit-mirror
+    rev: 23.12.0
     hooks:
       - id: black
         exclude: ^app/core/migrations/
@@ -69,7 +68,7 @@ repos:
     hooks:
       - id: blacken-docs
         additional_dependencies:
-        - black==23.7.0
+        - black==23.12.0
 
   - repo: https://github.com/pycqa/flake8
     rev: 6.1.0
@@ -95,14 +94,14 @@ repos:
           ]
 
   - repo: https://github.com/pycqa/isort
-    rev: 5.12.0
+    rev: 5.13.2
     hooks:
       - id: isort
         name: isort (python)
         args: ["--filter-files", "--force-single-line-imports"]
 
   - repo: https://github.com/PyCQA/bandit
-    rev: 1.7.5
+    rev: 1.7.6
     hooks:
       - id: bandit
         exclude: ^app/core/tests/
