--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,14 +2,13 @@
 # See https://pre-commit.com/hooks.html for more hooks
 default_install_hook_types: [pre-commit, pre-push]
 default_stages: [commit, push]
-fail_fast: true
 minimum_pre_commit_version: "2.18"
 default_language_version:
   python: python3.10
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v4.5.0
     hooks:
       # identify invalid files
       - id: check-ast
@@ -50,7 +49,7 @@ repos:
       - id: hadolint-docker
 
   - repo: https://github.com/asottile/pyupgrade
-    rev: v3.10.1
+    rev: v3.15.0
     hooks:
       - id: pyupgrade
         args: [--py310-plus]
@@ -61,7 +60,7 @@ repos:
       - id: django-upgrade
         args: [--target-version, "4.0"]
 
-  - repo: https://github.com/ambv/black
+  - repo: https://github.com/psf/black
     rev: 23.7.0
     hooks:
       - id: black
@@ -98,14 +97,14 @@ repos:
           ]
 
   - repo: https://github.com/pycqa/isort
-    rev: 5.12.0
+    rev: 5.13.0
     hooks:
       - id: isort
         name: isort (python)
         args: ["--filter-files", "--force-single-line-imports"]
 
   - repo: https://github.com/PyCQA/bandit
-    rev: 1.7.5
+    rev: 1.7.6
     hooks:
       - id: bandit
         exclude: ^app/core/tests/
