--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,13 @@ services:
       - POSTGRES_USER=people_depot
       - POSTGRES_PASSWORD=people_depot
       - POSTGRES_DB=people_depot_dev
+  mkdocs:
+    image: hackforlaops/mkdocs:latest
+    command: mkdocs serve --dev-addr 0.0.0.0:8000
+    ports:
+      - 8005:8000
+    volumes:
+      - .:/app
 
 volumes:
   postgres_data:
