--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -81,7 +81,6 @@ repos:
             flake8-bugbear,
             dlint,
             flake8-use-fstring,
-            flake8-use-pathlib,
             flake8-builtins,
             pep8-naming,
             flake8-variables-names,
@@ -101,7 +100,7 @@ repos:
         args: ["--filter-files", "--force-single-line-imports"]
 
   - repo: https://github.com/PyCQA/bandit
-    rev: 1.7.6
+    rev: 1.7.7
     hooks:
       - id: bandit
         exclude: ^app/core/tests/
@@ -122,6 +121,18 @@ repos:
   #   rev: v0.0.1
   #   hooks:
   #     - id: sync-pre-commit-deps
+
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    # Ruff version.
+    rev: v0.1.14
+    hooks:
+      # Run the linter.
+      - id: ruff
+        args: [ --fix ]
+        exclude: ^app/core/migrations/
+      # Run the formatter.
+      - id: ruff-format
+        exclude: ^app/core/migrations/
 
   - repo: local
     hooks:
