Correct env issues

--- a/app/.env.dev-example
+++ b/app/.env.dev-example
@@ -1,14 +1,15 @@
 DEBUG=1
+DJANGO_SETTINGS_MODULE=peopledepot.settings
 SECRET_KEY=foo
-DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+DJANGO_ALLOWED_HOSTS="localhost 127.0.0.1 [::1]"
 DJANGO_SUPERUSER_USERNAME=admin1111
 DJANGO_SUPERUSER_EMAIL=admin@admin.com
 DJANGO_SUPERUSER_PASSWORD=admin
 SQL_ENGINE=django.db.backends.postgresql
-SQL_DATABASE=people_depot_dev
-SQL_USER=people_depot
-SQL_PASSWORD=people_depot
-SQL_HOST=db
+SQL_DATABASE=postgres
+SQL_USER=postgres
+# SQL_PASSWORD=people_depot
+SQL_HOST=localhost
 SQL_PORT=5432
 DATABASE=postgres
 
