.env related changes

--- a/.env.dev-docker-example
+++ b/.env.dev-docker-example
@@ -12,7 +12,10 @@ SQL_HOST=db
 SQL_PORT=5432
 DATABASE=postgres
 
+COGNITO_DOMAIN=peopledepot
 COGNITO_AWS_REGION=us-west-2
 COGNITO_USER_POOL=us-west-2_Fn4rkZpuB
 COGNITO_CLIENT_ID=foo
 # COGNITO_CLIENT_SECRET=foo - not required if client secret was not defined
+
+PEOPLE_DEPOT_API_SECRET=people-depot-api-secret
