--- a/app/.env.dev-local-example
+++ b/app/.env.dev-local-example
@@ -8,7 +8,7 @@ DJANGO_SUPERUSER_PASSWORD=admin
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=postgres
 SQL_USER=postgres
-# SQL_PASSWORD=people_depot
+# SQL_PASSWORD=xxxxx - not required if no password
 SQL_HOST=localhost
 SQL_PORT=5432
 DATABASE=postgres
@@ -16,6 +16,6 @@ DATABASE=postgres
 COGNITO_DOMAIN=peopledepot
 COGNITO_AWS_REGION=us-east-2
 COGNITO_USER_POOL=us-east-2_i2EKGBFG1
-COGNITO_CLIENT_ID=35ehknpgi8ul8nfn2undd6ufro
+COGNITO_CLIENT_ID=foo
 # COGNITO_CLIENT_SECRET=foo - not required if client secret was not defined
 PEOPLE_DEPOT_API_SECRET=people-depot-api-secret
