.env related changes

--- a/app/.env.dev-local-example
+++ b/app/.env.dev-local-example
@@ -8,9 +8,9 @@ DJANGO_SUPERUSER_PASSWORD=admin
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=postgres
 SQL_USER=postgres
-# SQL_PASSWORD=xxxxx - not required if no password
+# SQL_PASSWORD=xxxxx - not required for local development
 SQL_HOST=localhost
-SQL_PORT=5432
+SQL_PORT=5433
 DATABASE=postgres
 
 COGNITO_DOMAIN=peopledepot
