--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,5 +1,6 @@
 cryptography~=37.0.2
 Django~=4.0.1
+django-allauth==0.58.2
 django-extensions~=3.1.5
 django-linear-migrations~=2.12.0
 django-phonenumber-field[phonenumbers]~=6.3.0
