--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -40,10 +40,10 @@ repos:
       - id: check-executables-have-shebangs
       - id: end-of-file-fixer
 
-  # - repo: https://github.com/AleksaC/hadolint-py
-  #   rev: v2.12.0.3
-  #   hooks:
-  #     - id: hadolint
+  - repo: https://github.com/AleksaC/hadolint-py
+    rev: v2.12.0.3
+    hooks:
+      - id: hadolint
 
   - repo: https://github.com/asottile/pyupgrade
     rev: v3.15.0
