--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -117,10 +117,11 @@ repos:
   #     - id: interrogate
   #       args: [-vv, -i, --fail-under=80]
 
-  - repo: https://github.com/mxr/sync-pre-commit-deps
-    rev: v0.0.1
-    hooks:
-      - id: sync-pre-commit-deps
+  # disabled because it reformats this yaml file
+  # - repo: https://github.com/mxr/sync-pre-commit-deps
+  #   rev: v0.0.1
+  #   hooks:
+  #     - id: sync-pre-commit-deps
 
   - repo: local
     hooks:
