--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -22,5 +22,6 @@ jobs:
             mkdocs-material-
       - run: pip install \
           mkdocs-material==9.1.17 \
+          mkdocs-awesome-pages-plugin==2.9.1 \
           mkdocs-autolinks-plugin==0.7.1
       - run: mkdocs gh-deploy --force
