--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,10 +2,11 @@
 # See https://pre-commit.com/hooks.html for more hooks
 default_install_hook_types: [pre-commit, pre-push]
 default_stages: [commit, push]
+fail_fast: true
 minimum_pre_commit_version: "2.18"
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
+    rev: v4.4.0
     hooks:
       # identify invalid files
       - id: check-ast
@@ -40,35 +41,16 @@ repos:
       - id: check-executables-have-shebangs
       - id: end-of-file-fixer
 
-  - repo: https://github.com/AleksaC/hadolint-py
-    rev: v2.12.0.3
+  - repo: https://github.com/hadolint/hadolint
+    rev: v2.12.1-beta
     hooks:
-      - id: hadolint
+      - id: hadolint-docker
 
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v3.15.0
-    hooks:
-      - id: pyupgrade
-        args: [--py310-plus]
-
-  - repo: https://github.com/adamchainz/django-upgrade
-    rev: 1.15.0
-    hooks:
-      - id: django-upgrade
-        args: [--target-version, "4.0"]
-
-  - repo: https://github.com/psf/black-pre-commit-mirror
-    rev: 23.12.0
+  - repo: https://github.com/ambv/black
+    rev: 23.7.0
     hooks:
       - id: black
         exclude: ^app/core/migrations/
-
-  - repo: https://github.com/asottile/blacken-docs
-    rev: 1.16.0
-    hooks:
-      - id: blacken-docs
-        additional_dependencies:
-        - black==23.12.0
 
   - repo: https://github.com/pycqa/flake8
     rev: 6.1.0
@@ -89,38 +71,31 @@ repos:
             flake8-executable,
             flake8-pytest-style,
             flake8-django,
-            flake8-comprehensions,
-            flake8-tidy-imports,
           ]
 
   - repo: https://github.com/pycqa/isort
-    rev: 5.13.2
+    rev: 5.12.0
     hooks:
       - id: isort
         name: isort (python)
         args: ["--filter-files", "--force-single-line-imports"]
 
   - repo: https://github.com/PyCQA/bandit
-    rev: 1.7.6
+    rev: 1.7.5
     hooks:
       - id: bandit
         exclude: ^app/core/tests/
 
-  - repo: https://github.com/shellcheck-py/shellcheck-py
-    rev: v0.9.0.6
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v3.10.1
     hooks:
-    -   id: shellcheck
+      - id: pyupgrade
 
   # - repo: https://github.com/econchick/interrogate
   #   rev: 1.4.0
   #   hooks:
   #     - id: interrogate
   #       args: [-vv, -i, --fail-under=80]
-
-  - repo: https://github.com/mxr/sync-pre-commit-deps
-    rev: v0.0.1
-    hooks:
-      - id: sync-pre-commit-deps
 
   - repo: local
     hooks:
@@ -146,6 +121,3 @@ repos:
         language: system
         types: [python] # hook only runs if a python file is staged
         pass_filenames: false
-
-ci:
-    skip: [check-django-migrations]
