--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,17 +9,22 @@ services:
     ports:
       - 8000:8000
     env_file:
-      - ./.env.dev
+      - ./.env.secret.dev
     depends_on:
       - db
   db:
     image: postgres:13.0-alpine
+
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     environment:
       - POSTGRES_USER=people_depot
       - POSTGRES_PASSWORD=people_depot
       - POSTGRES_DB=people_depot_dev
+      - POSTGRES_HOST=localhost
+
+    ports:
+      - 5432:5432
 
 volumes:
   postgres_data:
