--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 # Generate the entire file as reference with this form:
 # https://www.toptal.com/developers/gitignore?templates=python,django,dotenv,vim,visualstudiocode
 
-temp
+temp/
+.DS_Store
 
 ### django ###
 *.sqlite3
@@ -10,8 +11,12 @@ app/.coverage
 app/htmlcov
 
 ### dotenv ###
-.env.dev
 .env
+.env.dev
+.env.secret.*
+secrets/
+.DS_Store
+
 
 ### Vim ###
 # Swap
@@ -22,7 +27,7 @@ app/htmlcov
 [._]sw[a-p]
 
 ### python ###
-venv
+venv/
 venv-peopledepot/
 __pycache__
 
@@ -36,6 +41,8 @@ __pycache__
 !.vscode/*.code-snippets
 
 erd.png
+*,cover
+docs/build
 
 *.pyc
 
