Reset to only files that changed for local env build

--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,11 @@ app/.coverage
 app/htmlcov
 
 ### dotenv ###
-.env.dev
 .env
+.env.local
+.env.docker
+.DS_Store
+
 
 ### Vim ###
 # Swap
@@ -23,7 +26,7 @@ app/htmlcov
 [._]sw[a-p]
 
 ### python ###
-venv
+venv/
 venv-peopledepot/
 __pycache__
 
