Restore from main by using checkout

--- a/.gitignore
+++ b/.gitignore
@@ -11,11 +11,8 @@ app/.coverage
 app/htmlcov
 
 ### dotenv ###
+.env.dev
 .env
-.env.local
-.env.docker
-.DS_Store
-
 
 ### Vim ###
 # Swap
@@ -26,7 +23,7 @@ app/htmlcov
 [._]sw[a-p]
 
 ### python ###
-venv/
+venv
 venv-peopledepot/
 __pycache__
 
