--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,22 +9,17 @@ services:
     ports:
       - 8000:8000
     env_file:
-      - ./.env.secret.dev
+      - ./.env.dev
     depends_on:
       - db
   db:
     image: postgres:13.0-alpine
-
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     environment:
       - POSTGRES_USER=people_depot
       - POSTGRES_PASSWORD=people_depot
       - POSTGRES_DB=people_depot_dev
-      - POSTGRES_HOST=localhost
-
-    ports:
-      - 5432:5432
   mkdocs:
     image: hackforlaops/mkdocs:latest
     command: mkdocs serve --dev-addr 0.0.0.0:8000
@@ -32,7 +27,6 @@ services:
       - 8005:8000
     volumes:
       - .:/app
-      - POSTGRES_HOST=localhost
 
 volumes:
   postgres_data:
