Formatting for shellcheck

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,9 @@
 default_install_hook_types: [pre-commit, pre-push]
 default_stages: [commit, push]
 minimum_pre_commit_version: "2.18"
+
 repos:
+
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
     hooks:
@@ -14,7 +16,6 @@ repos:
       - id: check-toml
       - id: check-executables-have-shebangs
       - id: check-shebang-scripts-are-executable
-
       # git checks
       - id: check-merge-conflict
       - id: check-added-large-files
@@ -40,10 +41,10 @@ repos:
       - id: check-executables-have-shebangs
       - id: end-of-file-fixer
 
-  - repo: https://github.com/AleksaC/hadolint-py
-    rev: v2.12.0.3
-    hooks:
-      - id: hadolint
+  # - repo: https://github.com/AleksaC/hadolint-py
+  #   rev: v2.12.0.3
+  #   hooks:
+  #     - id: hadolint
 
   - repo: https://github.com/asottile/pyupgrade
     rev: v3.15.0
@@ -58,7 +59,7 @@ repos:
         args: [--target-version, "4.0"]
 
   - repo: https://github.com/psf/black-pre-commit-mirror
-    rev: 23.12.1
+    rev: 24.1.1
     hooks:
       - id: black
         exclude: ^app/core/migrations/
