--- a/app/.env.local-example
+++ b/app/.env.local-example
@@ -1,5 +1,6 @@
 DEBUG=1
 SECRET_KEY=foo
+DJANGO_SETTINGS_MODULE=peopledepot.settings
 DJANGO_ALLOWED_HOSTS="localhost 127.0.0.1 [::1]"
 DJANGO_SUPERUSER_USERNAME=admin444
 DJANGO_SUPERUSER_EMAIL=admin@admin.com
