--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:
   web:
+    container_name: web
     build: ./app
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
@@ -13,6 +14,7 @@ services:
     depends_on:
       - db
   db:
+    container_name: db
     image: postgres:13.0-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
@@ -23,6 +25,7 @@ services:
     ports:
       - 5432:5432
   mkdocs:
+    container_name: mkdocs
     image: hackforlaops/mkdocs:latest
     command: mkdocs serve --dev-addr 0.0.0.0:8000
     ports:
