feat: added seed data for sdg

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -74,7 +74,7 @@ repos:
     rev: 7.0.0
     hooks:
       - id: flake8
-        exclude: ^app/core/migrations/
+        exclude: '^app/core/migrations/|^app/data/migrations/|^app/core/scripts'
         args: [--max-line-length=119, --max-complexity=4, --pytest-fixture-no-parentheses]
         additional_dependencies:
           [
