--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,10 +1,14 @@
 cryptography~=37.0.2
 Django~=4.0.1
-django-extensions~=3.1.5
+django-allauth==0.58.2
+django-autocomplete-light==3.9.7
+django-cors-headers==4.3.1
+django-extensions==3.2.3
 django-linear-migrations~=2.12.0
 django-phonenumber-field[phonenumbers]~=6.3.0
+django-querysetsequence==0.17.0
 django-timezone-field==5.0
-djangorestframework~=3.13.1
+djangorestframework==3.14.0
 drf-jwt~=1.19.2
 drf-spectacular==0.22.1
 markdown~=3.4.1
