--- a/app/.env.local-example
+++ b/app/.env.local-example
@@ -5,6 +5,21 @@ DJANGO_ALLOWED_HOSTS="localhost 127.0.0.1 [::1]"
 DJANGO_SUPERUSER_USERNAME=admin444
 DJANGO_SUPERUSER_EMAIL=admin@admin.com
 DJANGO_SUPERUSER_PASSWORD=admin
+
+# Settings for SQLITE
+# SQLITE is useful for local.env which is used for localdevelopment
+#  because creation of db is automatic and it is easy to delete the
+# db (db.sqlite3 file) and start over
+SQL_ENGINE=
+SQL_DATABASE=
+SQL_USER=
+SQL_PASSWORD=
+SQL_HOST=
+SQL_PORT=
+
+# If you want to use postgres, you need to set the following settings
+# DATABASE=postgres
+# Settings for POSTGRES
 # SQL_ENGINE=django.db.backends.postgresql
 # SQL_DATABASE=people_depot_dev
 # SQL_USER=people_depot
@@ -12,6 +27,7 @@ DJANGO_SUPERUSER_PASSWORD=admin
 # SQL_HOST=db
 # SQL_PORT=5432
 # DATABASE=postgres
+
 
 COGNITO_AWS_REGION=us-west-2
 COGNITO_USER_POOL=us-west-2_Fn4rkZpuB
