--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -7,22 +7,30 @@ WORKDIR /usr/src/app
 # set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
+ENV PYTHONPYCACHEPREFIX=/root/.cache/pycache/
+ENV PIP_CACHE_DIR=/var/cache/buildkit/pip
+
+RUN mkdir -p $PIP_CACHE_DIR
+RUN rm -f /etc/apt/apt.conf.d/docker-clean; echo 'Binary::apt::APT::Keep-Downloaded-Packages "true";' > /etc/apt/apt.conf.d/keep-cache
 
 # install system dependencies
-RUN apt-get update \
-  && apt-get --no-install-recommends install -y \
+RUN \
+  --mount=type=cache,target=/var/cache/apt,sharing=locked \
+  --mount=type=cache,target=/var/lib/apt,sharing=locked \
+  apt-get update \
+  && apt-get install --no-install-recommends -yqq \
   netcat=1.10-46 \
   gcc=4:10.2.1-1 \
   postgresql=13+225+deb11u1 \
-  graphviz=2.42.2-5 \
-  && apt-get clean \
-  && rm -rf /var/lib/apt/lists/*
+  graphviz=2.42.2-5
 
 # install dependencies
 COPY ./requirements.txt .
+# hadolint ignore=DL3042
 RUN \
-  pip install --no-cache-dir uv==0.1.15 \
-  && uv pip install --no-cache-dir --system -r requirements.txt
+  --mount=type=cache,target=/root/.cache \
+  pip install uv==0.1.15 \
+  && uv pip install --system -r requirements.txt
 
 # copy entrypoint.sh
 COPY ./entrypoint.sh .
